tests/errors/mismatch-widths.futil
import "primitives/std.lib";
component main() -> () {
  cells {
    add = prim std_add(32);
    x = prim std_reg(16);
  }
  wires {
    add.left = x.out;
  }
  control {}
}
